--- a/app/views/profile_user/index.html.haml
+++ b/app/views/profile_user/index.html.haml
@@ -1,15 +1,21 @@
-%p
-  %strong Nome:
-  = @user.first_name+" "+@user.last_name
-%p
-  %strong Email:
-  = current_user.email
-%p
-  %strong Telefone:
-  = @user.phone
-%p
-  %strong Data de nascimento:
-  = @user.birthday
-%p
-  %strong Endereço:
-  = @user.address
+.col-md-6.offset-md-3
+  .img-thumbnail.rounded-circle{:style => "width: 200px; height: 200px;"}
+    =image_tag 'profile_user.jpg', class: 'rounded-circle'
+  %p
+    %strong Nome:
+    = @user.first_name+" "+@user.last_name
+  %p
+    %strong Email:
+    = current_user.email
+  %p
+    %strong Telefone:
+    = @user.phone
+  %p
+    %strong Data de nascimento:
+    = @user.birthday
+  %p
+    %strong Endereço:
+    = @user.address
+
+.h1
+  Teste
