--- a/app/views/duties/show.html.erb
+++ b/app/views/duties/show.html.erb
@@ -35,5 +35,5 @@
   <%= @duty.done %>
 </p>
 
-<%= link_to 'Edit', edit_duty_path(@duty) %> |
-<%= link_to 'Back', duties_path %>
+<%= link_to 'Editar', edit_pet_duty_path(@duty.pet) %> |
+<%= link_to 'Voltar', group_pets_path(@duty.pet) %>
