--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -18,5 +18,5 @@
 
 <br />
 
-<%= link_to 'Novo Pet', new_group_pet_path(params[:group_id]) %> |
+<%= link_to 'Novo Pet', new_group_pet_path(@group) %> |
 <%= link_to 'Voltar ao Grupo', group_path(@group) %>
