--- a/app/views/duties/_form.html.erb
+++ b/app/views/duties/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: duty, local: true) do |form| %>
-  <% if duty.errors.any? %>
+<%= form_for([@duty.pet, @duty]) do |form| %>
+  <% if @duty.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(duty.errors.count, "error") %> prohibited this duty from being saved:</h2>
+      <h2><%= pluralize(@duty.errors.count, "error") %> prohibited this duty from being saved:</h2>
 
       <ul>
-      <% duty.errors.full_messages.each do |message| %>
+      <% @duty.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -12,37 +12,38 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label :nome %>
     <%= form.text_field :name %>
   </div>
 
   <div class="field">
-    <%= form.label :description %>
+    <%= form.label :descrição %>
     <%= form.text_area :description %>
   </div>
 
   <div class="field">
-    <%= form.label :importance %>
-    <%= form.number_field :importance %>
+    <%= form.label :importância %>
+    <%= form.number_field :importance, in: 1..5, step: 1 %>
   </div>
 
   <div class="field">
-    <%= form.label :frequency %>
-    <%= form.number_field :frequency %>
+    <%= form.label "frequência em horas" %>
+    <%= form.number_field :frequency, in: 1..1000 %>
   </div>
 
   <div class="field">
-    <%= form.label :pet_id %>
-    <%= form.text_field :pet_id %>
+    <%= form.label "data de execução" %>
+    <%= form.datetime_local_field :until %>
   </div>
 
   <div class="field">
-    <%= form.label :need_id %>
-    <%= form.text_field :need_id %>
+    <%= form.label :need %><br />
+    <%= form.collection_select :need_id, Need.all, :id, :name, {prompt: "Need"} %>
   </div>
 
+
   <div class="field">
-    <%= form.label :done %>
+    <%= form.label :feito %>
     <%= form.check_box :done %>
   </div>
 
