--- a/app/views/duties/new.html.erb
+++ b/app/views/duties/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Duty</h1>
+<h1>Novo Afazer</h1>
 
-<%= render 'form', duty: @duty %>
+<%= render 'form' %>
 
-<%= link_to 'Back', duties_path %>
+<%= link_to 'Voltar', group_pets_path(@duty.pet.group) %>
