--- a/app/views/layouts/profile_user.html.haml
+++ b/app/views/layouts/profile_user.html.haml
@@ -16,19 +16,7 @@
       .row
         / Coluna da esquerda
         .col-md-3
-          .text
-            .list-group.list-group-flush
-              .list-group-item.list-group-item-action
-                = link_to 'Editar perfil',edit_profile_user_path(current_user.id)
-              .list-group-item.list-group-item-action
-                = link_to "Alterar senha", edit_user_registration_path(current_user.id)
-              .list-group-item.list-group-item-action
-                - if @user.group
-                  = link_to 'Grupos', group_path(@user.group)
-                - else
-                  = link_to 'Adicionar grupo', new_group_path
-              %a.list-group-item.list-group-item-action.disabled{:href => "#"} Amigos
-              %a.list-group-item.list-group-item-action.disabled{:href => "#"} Pets
+          = render 'layouts/sidemenu'
         / Coluna da direita
         .col-md-9
           = yield
