--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -1,44 +1,44 @@
-%h4.card-title.mt-6.text-center Alterar email e senha:
-%p#profile-name.profile-name-card
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  .form-group.input-group
-    .input-group-prepend
-      %span.input-group-text
-        %i.fa.fa-envelope
-    = f.email_field :email, autofocus: true, type:"email", id:"inputEmail", placeholder:"Email",class: "form-control"
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    %p
-    .label
-      Nova senha
-  .form-group.input-group
-    .input-group-prepend
-      %span.input-group-text
-        %i.fa.fa-lock
-    = f.password_field :password, autocomplete: "off", type:"password", id:"inputPassword",placeholder:"Nova Senha", required: true , class: "form-control"
-  %p
-    - if @minimum_password_length
-      %em
-        Minimo de caracteres:
-        = @minimum_password_length
-  .form-group.input-group
-    .input-group-prepend
-      %span.input-group-text
-        %i.fa.fa-lock
-    = f.password_field :password_confirmation, autocomplete: "off", type:"password", id:"inputPassword", placeholder:"Confirme a senha", required: true , class: "form-control"
-  .form-group.input-group
-    .input-group-prepend
-      %span.input-group-text
-        %i.fa.fa-lock
-    = f.password_field :current_password, autocomplete: "off", type:"password", id:"inputPassword", placeholder:"Senha Atual", required: true , class: "form-control"
-  %br/
-  .actions
-    = f.submit "Atualizar",class: "btn btn-lg btn-success btn-block btn-signin"
-    - unless devise_error_messages!.blank?
-      - resource.errors.full_messages.each do |message|
-        = javascript_tag "$.notify( { message: '#{message}'}, { type: 'danger', placement: { from: 'top', align: 'center' }})"
-%h6.card-title.mt-6.text-center Deseja excluir sua conta ?
-#{button_to "Cancelar conta", registration_path(resource_name), data: { confirm: "Você esta prestes a excluir sua conta, tem certeza que deseja abandonar seus pets? PLZdontDie!!" },class: "btn btn-lg btn-primary btn-block btn-danger", method: :delete}
-= link_to "Voltar", :back
+%hr/
+.row
+  .col-md-3
+    = render 'layouts/sidemenu'
+  .col-md-9
+    %h4.card-title.mt-6.text-center Alterar email e senha:
+    %p#profile-name.profile-name-card
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+      .form-group.row
+        %label.col-sm-3.col-form-label{:for => "inputEmail"} Email:
+        .col-sm-9
+          #inputEmail
+            = f.email_field :email, autofocus: true, type:"email", id:"inputEmail", placeholder:"Email",class: "form-control"
+      - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+        %div
+          Currently waiting confirmation for: #{resource.unconfirmed_email}
+      .form-group.row
+        %label.col-sm-3.col-form-label{:for => "inputNovasenha"} Nova Senha:
+        .col-sm-9
+          #inputNovasenha
+            = f.password_field :password, autocomplete: "off", type:"password", id:"inputPassword",placeholder:"Nova Senha", required: true,class: "form-control"
+          - if @minimum_password_length
+            %em
+              Minimo de caracteres:
+              = @minimum_password_length
+      .form-group.row
+        %label.col-sm-3.col-form-label{:for => "inputConfirmPassword"} Confirme a senha:
+        .col-sm-9
+          #inputConfirmPassword
+          = f.password_field :password_confirmation, autocomplete: "off", type:"password", id:"inputPassword", placeholder:"Confirme a senha", required: true , class: "form-control"
+      .form-group.row
+        %label.col-sm-3.col-form-label{:for => "inputPassword"} Senha Atual:
+        .col-sm-9
+          #inputPassword
+          = f.password_field :current_password, autocomplete: "off", type:"password", id:"inputPassword", placeholder:"Senha Atual", required: true , class: "form-control"
+      %br/
+      .actions
+        = f.submit "Atualizar",class: "btn btn-lg btn-success"
+        - unless devise_error_messages!.blank?
+          - resource.errors.full_messages.each do |message|
+            = javascript_tag "$.notify( { message: '#{message}'}, { type: 'danger', placement: { from: 'top', align: 'center' }})"
+    %h6.card-title.mt-6.text-center Deseja excluir sua conta ?
+    #{button_to "Cancelar conta", registration_path(resource_name), data: { confirm: "Você esta prestes a excluir sua conta, tem certeza que deseja abandonar seus pets? PLZdontDie!!" },class: "btn btn-lg btn-primary btn-block btn-danger", method: :delete}
+%hr/
