--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -4,6 +4,8 @@
 		.col-md-3
 			= render 'layouts/sidemenu'
 		.col-md-9
-			%h1 Novo Grupo
+			%h1 Editar Grupo
 			= render 'form', group: @group
-			= link_to 'Voltar', groups_path
+			= link_to 'Mais', @group
+			|
+			\#{link_to 'Voltar', groups_path}
