--- a/app/views/layouts/_sidemenu.html.haml
+++ b/app/views/layouts/_sidemenu.html.haml
@@ -7,12 +7,12 @@
     .list-group-item.list-group-item-action
       - if devise_controller? && resource_name == :user
         - if @user.profile_user.group
-          = link_to 'Grupos', group_path(@user.profile_user.group)
+          = link_to 'Grupos', groups_path(@user.profile_user.group)
         - else
           = link_to 'Adicionar grupo', new_group_path
       - else
         - if @user.group
-          = link_to 'Grupos', group_path(@user.group)
+          = link_to 'Grupos', groups_path(@user.group)
         - else
           = link_to 'Adicionar grupo', new_group_path
     %a.list-group-item.list-group-item-action.disabled{:href => "#"} Amigos
