--- a/app/views/layouts/_sidemenu.html.haml
+++ b/app/views/layouts/_sidemenu.html.haml
@@ -1,9 +1,11 @@
 .text
   .list-group.list-group-flush
     .list-group-item.list-group-item-action
+      = link_to 'Perfil',user_path(current_user.id)
+    .list-group-item.list-group-item-action
       = link_to 'Editar perfil',edit_profile_user_path(current_user.id)
     .list-group-item.list-group-item-action
-      = link_to "Alterar senha", edit_user_registration_path(current_user.id)
+      = link_to "Email e Senha", edit_user_registration_path(current_user.id)
     .list-group-item.list-group-item-action
       - if devise_controller? && resource_name == :user
         - if @user.profile_user.group
