--- a/app/views/needs/show.html.erb
+++ b/app/views/needs/show.html.erb
@@ -1,4 +1,27 @@
-<p id="notice"><%= notice %></p>
+<p>
+  <strong>Nome:</strong>
+  <%= @need.name %>
+</p>
 
-<%= link_to 'Edit', edit_need_path(@need) %> |
-<%= link_to 'Back', needs_path %>
+<p>
+  <strong>Descrição:</strong>
+  <%= @need.description %>
+</p>
+
+<p>
+  <strong>Importância:</strong>
+  <%= @need.importance %>
+</p>
+
+<p>
+  <strong>Frequência:</strong>
+  <%= @need.frequency %>
+</p>
+
+<p>
+  <strong>Espécie:</strong>
+  <%= @need.specie.name %>
+</p>
+
+<%= link_to 'Editar', edit_species_need_path(@need.specie) %> |
+<%= link_to 'Voltar', species_needs_path %>
