Add BDD tests to delete group

--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -17,5 +17,5 @@
               %td= group.name
               %td= link_to 'Mais', group
               %td= link_to 'Editar', edit_group_path(group)
-              %td= link_to 'Apagar', group, method: :delete, data: { confirm: 'Tem certeza?' }
+              %td= link_to 'Apagar', group, method: :delete, data: { confirm: 'Tem certeza?' }, id: "apagar_#{group.id}"
       = link_to 'Novo Grupo', new_group_path
