--- a/app/views/profile_user/index.html.haml
+++ b/app/views/profile_user/index.html.haml
@@ -1,24 +1,18 @@
-%p
-  %strong Nome:
-  = @user.first_name+" "+@user.last_name
-%p
-  %strong Email:
-  = current_user.email
-%p
-  %strong Telefone:
-  = @user.phone
-%p
-  %strong Data de nascimento:
-  = @user.birthday
-%p
-  %strong Endereço:
-  = @user.address
-%p
-  = link_to 'Editar perfil',edit_profile_user_path(current_user.id)
-%p
-  = link_to "Alterar senha", edit_user_registration_path(current_user.id)
-
-- if @user.group
-  = link_to 'Grupo', group_path(@user.group)
-- else
-  = link_to 'Adicionar grupo', new_group_path
+.col-md-6.offset-md-3
+  .img-thumbnail.rounded-circle{:style => "width: 200px; height: 200px;"}
+    =image_tag 'profile_user.jpg', class: 'rounded-circle'
+  %p
+    %strong Nome:
+    = @user.first_name+" "+@user.last_name
+  %p
+    %strong Email:
+    = current_user.email
+  %p
+    %strong Telefone:
+    = @user.phone
+  %p
+    %strong Data de nascimento:
+    = @user.birthday
+  %p
+    %strong Endereço:
+    = @user.address
