--- a/app/views/layouts/user_devise.html.haml
+++ b/app/views/layouts/user_devise.html.haml
@@ -1,18 +1,16 @@
 !!!
 %html
   %head
+    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title PleaseDontDie
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
-    = stylesheet_link_tag    'user', media: 'all'
     = javascript_include_tag 'application'
-    = javascript_include_tag 'user'
     %link{:href => "css/uikit.css", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "css/responsive.css", :media => "only screen and (max-width: 1200px)", :rel => "stylesheet"}/
   %body
     = render 'layouts/navbar'
-    .container{:style => "padding-top: 3%;" }
-      %article.card-body.bg-info.mx-auto{:style => "max-width: 400px; padding-top: 25px;"}
-        = yield
-        = render 'layouts/shared/notifications'
+    .container
+      = yield
+      = render 'layouts/shared/notifications'
