Add image to pets

--- a/app/views/pets/show.html.haml
+++ b/app/views/pets/show.html.haml
@@ -6,6 +6,8 @@
     .col-md-9
       %p#notice= notice
       %p
+        - if @pet.image.attached?
+          = image_tag @pet.image
         %b Nome:
         = @pet.name
       %p
