--- a/app/views/profile_user/show.html.haml
+++ b/app/views/profile_user/show.html.haml
@@ -1,6 +1,9 @@
 .col-md-6.offset-md-3
   .img-thumbnail.rounded-circle{:style => "width: 200px; height: 200px;"}
-    =image_tag 'profile_user.jpg', class: 'rounded-circle'
+    - if @user.picture.attached?
+      =image_tag @user.picture
+    - else
+      =image_tag 'profile_user.jpg', class: 'rounded-circle'
   %p
     %strong Nome:
     = @user.first_name+" "+@user.last_name
