Add routes, views and controllers for user duties and pets

--- a/app/views/duties/show.html.haml
+++ b/app/views/duties/show.html.haml
@@ -21,7 +21,10 @@
         = @duty.pet.name
       %p
         %strong Necessidade Associada:
-        = @duty.need.name
+        - if @duty.need
+          = @duty.need.name
+        - else
+          Não associado
       %p
         %strong Feito?
         = @duty.done
