--- a/app/views/layouts/_sidemenu.html.haml
+++ b/app/views/layouts/_sidemenu.html.haml
@@ -11,4 +11,7 @@
     .list-group-item.list-group-item-action
       = link_to 'Adicionar grupo', new_group_path
     %a.list-group-item.list-group-item-action.disabled{:href => "#"} Amigos
-    %a.list-group-item.list-group-item-action.disabled{:href => "#"} Pets
+    .list-group-item.list-group-item-action
+      = link_to 'Pets', user_pets_path(current_user.id)
+    .list-group-item.list-group-item-action
+      = link_to 'Afazeres', user_duties_path(current_user.id)
