--- a/app/views/pets/index.html.haml
+++ b/app/views/pets/index.html.haml
@@ -4,7 +4,7 @@
     .col-md-3
       = render 'layouts/sidemenu'
     .col-md-9
-      %h1 Seus Pets
+      %h1= "Pets do Grupo #{@group.name}"
       %table
         %tr
           %th Nome
