--- a/app/views/profile_user/show.html.haml
+++ b/app/views/profile_user/show.html.haml
@@ -1,7 +1,7 @@
 .col-md-6.offset-md-3
   .img-thumbnail.rounded-circle{:style => "width: 200px; height: 200px;"}
     - if @user.picture.attached?
-      =image_tag @user.picture
+      =image_tag @user.picture, class: 'rounded-circle'
     - else
       =image_tag 'profile_user.jpg', class: 'rounded-circle'
   %p
