--- a/app/views/layouts/_sidemenu.html.haml
+++ b/app/views/layouts/_sidemenu.html.haml
@@ -10,7 +10,8 @@
       = link_to 'Grupos', groups_path
     .list-group-item.list-group-item-action
       = link_to 'Adicionar grupo', new_group_path
-    %a.list-group-item.list-group-item-action.disabled{:href => "#"} Amigos
+    .list-group-item.list-group-item-action
+      = link_to 'Amigos', user_friends_path(current_user.id)
     .list-group-item.list-group-item-action
       = link_to 'Pets', user_pets_path(current_user.id)
     .list-group-item.list-group-item-action
