Mods in duties and add image to group

--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -16,6 +16,11 @@
     <%= form.text_field :name %>
   </div>
 
+  <div class="field">
+    <%= form.label :foto %>
+    <%= form.file_field :picture %>
+  </div>
+
   <div class="actions">
     <%= form.submit "Enviar"%>
   </div>
