--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -20,7 +20,7 @@
   </p>
   <p>
     <%= f.label :aniversário %><br />
-    <%= f.date_select :birthday, :start_year=>2000 %>
+    <%= f.text_field :birthday, :start_year=>2000, :type=>'date'%>
   </p>
   <p>
     <%= f.label :sexo %><br />
