--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -12,7 +12,7 @@
             - if @group.picture.attached?
               =image_tag @group.picture
             - else
-              = link_to (image_tag('profile_user.jpg')), group
+              = link_to (image_tag('profile_user.jpg'))
           = link_to 'Editar grupo', edit_group_path(@group), class: "btn btn-lg btn-block btn-primary"
           = link_to "Novo Pet", new_group_pet_path(@group), id:'novo-pet',class: "btn btn-lg btn-block btn-light btn-outline-dark"
         .col-md-9
