--- a/app/views/profile_user/duties.html.haml
+++ b/app/views/profile_user/duties.html.haml
@@ -1,5 +1,5 @@
 %h1 Afazeres
-%table
+%table.table.table-striped
   %thead
     %tr
       %th= link_to "Nome", user_duties_path(current_user.id, field_order: 'name')
