Added message when user is added to group

--- a/app/views/profile_user/feed.html.erb
+++ b/app/views/profile_user/feed.html.erb
@@ -29,6 +29,9 @@
 </ul>
 <% if @groups %><h3>Grupos</h3><% end %>
 <ul>
+  <% @groupsUsers.each do |groupUser| %>
+    <li>Grupo <%= link_to groupUser.group_id, group_path(groupUser.group_id) %> - O usuário <%= link_to groupUser.profile_user_id, user_path(groupUser.profile_user_id) %> foi adicionado ao grupo em <%= groupUser.created_at.localtime.strftime('%a, %d %b %Y %H:%M') %>.</li>
+  <% end %>
 <% @groups.each do |group| %>
     <li>Grupo <%= link_to group.name, group_path(group) %> - O grupo foi
     <% if group.created_at == group.updated_at %>
