--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -14,7 +14,7 @@
             - else
               = link_to (image_tag('profile_user.jpg'))
           = link_to 'Editar grupo', edit_group_path(@group), class: "btn btn-lg btn-block btn-primary"
-          = link_to "Novo Pet", new_group_pet_path(@group), id:'novo-pet',class: "btn btn-lg btn-block btn-light btn-outline-dark"
+          = link_to "Novo Pet", new_group_pet_path(@group), id:'novo-pet',class: "btn btn-lg btn-block btn-light btn-outline-primary"
         .col-md-9
           .row
             .col-md-6
@@ -37,24 +37,9 @@
               .card{:style => "max-width: 300px;"}
                 .card-header.text-center
                   = pet.name
-                = link_to (image_tag(pet.image)), [pet.group, pet]
-
-
-
-          / .card{:style => "min-width: 250px; max-width: 250px;"}
-          /   .card-header.text-center
-          /     = group.name
-          /   - if group.picture.attached?
-          /     = link_to (image_tag(group.picture)), group
-          /   - else
-          /     = link_to (image_tag('profile_user.jpg')), group
-          /   .card-body.text-center
-          /     %p.card-text
-          /       Descricao do Grupo
-          /     = link_to '', edit_group_path(group), class: "btn btn-primary fa fa-edit"
-          /     %i.fa.fa-trash-alt
-          /     = link_to '', group, class: "btn btn-danger fa fa-times-circle", method: :delete, data: { confirm: 'Tem certeza?' }
-          /   .card-footer
-          /     %small.text-muted colocar aqui quando foi atualizado...
+                -if pet.image.attached?
+                  = link_to (image_tag(pet.image)), [pet.group, pet]
+                -else
+                  = link_to (image_tag 'profile_user.jpg'), [pet.group, pet]
 
 
