--- a/app/views/duties/index.html.haml
+++ b/app/views/duties/index.html.haml
@@ -4,59 +4,25 @@
     .col-md-3
       = render 'layouts/sidemenu'
     .col-md-9
-      %h1 Afazeres teste
+      %h1.text-center
+        Tarefas
       %table.table.table-striped
         %thead
           %tr
-            %th{:scope => "col"} Nome
-            %th{:scope => "col"} Descrição
-            %th{:scope => "col"} Importância
-            %th{:scope => "col"} Frequência
-            %th{:scope => "col"} Pet
-            %th{:scope => "col"} Necessidade Associada
-            %th{:scope => "col"} Feito?
+            %th Pet
+            %th= link_to "Tarefa", user_duties_path(current_user.id, field_order: 'name')
+            %th= link_to "Importância", user_duties_path(current_user.id, field_order: 'importance')
+            %th= link_to "Frequência", user_duties_path(current_user.id, field_order: 'frequency')
+            %th= link_to "Prazo", user_duties_path(current_user.id, field_order: 'until')
+            %th= link_to "Feito?", user_duties_path(current_user.id, field_order: 'done')
             %th{:colspan => "3"}
         %tbody
           - @duties.each do |duty|
             %tr
-              %th{:scope => "row"}
+              %td= duty.pet.name
               %td= link_to duty.name, [duty.pet, duty]
-              %td= duty.name
-              %td= duty.description
               %td= duty.importance
               %td= duty.frequency
-              %td= duty.pet.name
-              %td= duty.need.name
-              %td= duty.done
-              %td= link_to 'Editar', edit_pet_duty_path(duty.pet, duty)
-              %td= link_to 'Apagar', [duty.pet, duty],  confirm: 'Tem certeza?', method: :delete
-      %br/
-      = link_to 'Novo afazer', new_pet_duty_path(@pet)
-      = link_to 'Voltar ao Grupo', group_path(@pet.group)
-
-
-
-
-%table.table.table-striped
-  %thead
-    %tr
-      %th{:scope => "col"} #
-      %th{:scope => "col"} First
-      %th{:scope => "col"} Last
-      %th{:scope => "col"} Handle
-  %tbody
-    %tr
-      %th{:scope => "row"} 1
-      %td Mark
-      %td Otto
-      %td @mdo
-    %tr
-      %th{:scope => "row"} 2
-      %td Jacob
-      %td Thornton
-      %td @fat
-    %tr
-      %th{:scope => "row"} 3
-      %td Larry
-      %td the Bird
-      %td @twitter
+              %td= duty.until
+              %td= check_box_tag 'feito', duty.id,  duty.done, data: { remote: true, url: duty_done_path(duty.pet, duty, done: !duty.done), method: 'post'}
+              %td= link_to 'Apagar', [duty.pet, duty],  confirm: 'Tem certeza?', method: :delete, class: "btn btn-danger btn-sm"
