--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -20,7 +20,7 @@
             .col-md-6
               .h3 Descrição:
             .col-md-6
-              = form_for(add_group_user_path(@group.id)) do |form|
+              = form_for(:add_user, url: add_group_user_path(@group.id)) do |form|
                 .form-group
                   %label.col-form-label{:for => "inputMember"}
                   #inputMember
