Fix birthday display

--- a/app/views/pets/show.html.haml
+++ b/app/views/pets/show.html.haml
@@ -24,7 +24,8 @@
             = @pet.bio
           %p
             %strong Aniversário:
-            = @pet.birthday.strftime("%d/%m/%Y")
+            -if @pet.birthday
+              = @pet.birthday.strftime("%d/%m/%Y")
           %p
             %strong Sexo:
             = @pet.sex
