--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -31,7 +31,9 @@
                   - @group.profile_users.each do |user|
                     .card{:style => "max-width: 50px;"}
                       = link_to (image_tag(user.picture)), profile_user_path(user)
+      .row
         .col-md-12
+          %h5 Pets
           .card-deck
             - @group.pets.each do |pet|
               .card{:style => "max-width: 300px;"}
