--- a/app/views/profile_user/pets.html.haml
+++ b/app/views/profile_user/pets.html.haml
@@ -7,6 +7,7 @@
     - @pets.each do |pet|
       %tr
         %td= link_to pet.name, [pet.group, pet]
-        %td= pet.birthday.strftime("%d/%m/%Y")
+        - if pet.birthday
+          %td= pet.birthday.strftime("%d/%m/%Y")
         %td= link_to 'Editar', edit_group_pet_path(pet.group, pet)
         %td= link_to 'Apagar', [pet.group, pet], :confirm => 'Tem certeza?', :method => :delete
