pretty form duties

--- a/app/views/duties/new.html.haml
+++ b/app/views/duties/new.html.haml
@@ -3,7 +3,5 @@
     .row
         .col-md-3
             = render 'layouts/sidemenu'
-        .col-md-9
-            %h1 Novo Afazer
+        .col-md-9r
             = render 'form'
-            = link_to 'Voltar', group_pets_path(@duty.pet.group)
